GS-6478 fixed bugs including: 1. School Title aligned with page count 2. Results per page now aligned with checkboxes 3. Parent Review column header now left aligned with column text 4. Headers now underlined on mouse over 5. Show all in the bottom pagination is centered and left and right padding reduced 6. Increased the padding on the bottom of each school result

--- a/src/webapp/res/css/school/schoolsTable.css
+++ b/src/webapp/res/css/school/schoolsTable.css
@@ -1,25 +1,32 @@
 #resultsheader {
-    padding: 20px 20px 10px 20px;
+    padding: 10px 20px 10px 20px;
+}
+#resultsheader #rh_col_left{
+    height:25px;
 }
 
 .query {
+    margin: 10px 0 10px 0;
     float: left;
 }
 
-#searchfilterform {
-	padding-top: 8px;
-
+#searchResults {
+    padding-top: 4px;
 }
 #searchfilterform div.formContainer{
-    padding-bottom: 15px;
+    height:24px;
+    line-height:23px;
+    padding-top: 8px;
 }
+
 #searchfilterform div.checkboxes {
     float:left;
-    padding-top: 3px;
+}
+#resultsPerPageSelector{
+    float: right;
 }
 #searchfilterform div.resultsPerPage {
     float: right;
-    padding: 0 0 0 0;
 }
 
 #searchfilterform select {
@@ -27,19 +34,24 @@
 }
 
 #resultspagination {
-	padding-bottom: 4px;
+    float: right;
     background: none;
+    padding-bottom:0;
+    margin-bottom:10px;
 }
 
+#pagination{
+    height: 23px;
+    padding: 5px 10px;
+    line-height: 22px;
+}
 #pagination .showAll {
     float:left;
     padding-left: 0px;
     margin-left: 0px;
 }
 
-#resultsheader #rh_col_left{
-    height: 18px;
-}
+
 
 #searchResultsHeader {
     width: 542px;
@@ -93,22 +105,17 @@
     margin-left: 0px;
 }
 
-#searchResultsList .result {
-    @border-top: 1px solid #e2e3cb;
-    padding-top: 8px;
-}
 #searchResultsList .result:first-child{
     border-top: 0px;
 }
 
 #reviewsHeader {
     float:left;
-    width: 163px;
+    width: 151px;
     margin-right: 0px;
-    margin-left: 0px
+    padding-left: 12px;
+    text-align : left;
 }
-
-
 
 .contentGS {
     padding: 0 10px 0 10px;
@@ -144,6 +151,7 @@
 
 #searchResultsHeader :hover{
     background: url(/res/img/search/tab_on_bg.gif) repeat;
+    text-decoration: underline;
 }
 
 .cobranded #searchfooter {
@@ -190,6 +198,7 @@ div#col_right div#compareInCity input.submit {
 
 .compare_schools_row {
     margin-top: 5px;
+    margin-bottom: 6px;
     height: 13px;
     position: relative;
 }
